# footballappproject

./: .dockerignore  .gitignore  BRAND.md  CLAUDE.md  DEPLOY.md  DEVELOPMENT_PLAN.md  Deploy Guide.md  Dockerfile  Latest feedback from users.rtf  MULTI_TEAM_PLAN.md  PHASES.md  README.md  V1_MULTIUSER_PLAN.md  demo.py  main.py  pyproject.toml  railway.toml  render.yaml  requirements.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
assets/brand/: tokens.json
backend/: settings.py
backend/algorithm/: gk_selector.py  rotation_engine.py  skill_balancer.py  time_balancer.py  validator.py
backend/api/: __init__.py  deps.py
backend/api/routers/: __init__.py  admin.py  auth.py  feedback.py  matches.py  public.py  squad.py  teams.py  tournaments.py
backend/auth/: __init__.py  email.py  session.py  tokens.py
backend/db/: __init__.py  database.py  models.py  repositories.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 4cf63d43cd4c_baseline_schema.py  57b6bfa73768_relational_rotation_storage.py  a8d3e6f1c2b4_tournament_max_subs.py  b2e4a9c17d30_match_length_and_show_timer.py  b7f1e2a9c3d5_squad_owner_account.py  c3f8b1a2e5d4_match_hide_score.py  c9d4e2b1a7f6_invite_invited_by.py  d5a9c7e1f3b2_share_gk_flag.py  f7c2d9a4b8e1_account_session_epoch.py
backend/models/: game_config.py  match.py  player.py  rotation.py
backend/services/: __init__.py  analytics.py  match_service.py  spreadsheet_export.py  tournament_service.py
docs/: Deploy Guide.md  MULTI_TEAM_PLAN.md  multi-user-testing.md
docs/adr/: 0001-evolve-not-rebuild.md  0002-auth-magic-link-first.md  0003-hosting-railway-neon.md  0004-frontend-vanilla-js-modules.md
docs/archive/: PHASES.md
docs/feedback/: 2026-07-user-feedback.md
docs/refactor/: NEXT_STEPS.md  app-js-dependency-map.md  postgres-neon-migration-testing.md  verify_backfill.py
frontend/: admin.html  api.js  app.js  auth.js  brand.js  data.js  index.html  legal.css  manifest.json  pitch.js  privacy.html  quotes.js  safeguarding.html  screens.js  season.js  settings.js  setup-form.js  share.js  state.js  style.css  sw.js  teams.js  terms.html  theme.js  toast.js  tournament.js
marketing/: README.md  about.html  index.html  llms.txt  main.js  robots.txt  sitemap.xml  style.css
tests/: conftest.py
tests/bdd/: conftest.py
tests/bdd/features/: gk_priority.feature  match_lifecycle.feature  multi_size.feature  position_restrictions.feature  rotation_generation.feature  substitution_rules.feature  team_balance.feature  tournament_fairness.feature
tests/bdd/steps/: gk_steps.py  test_gk.py  test_match_lifecycle_bdd.py  test_multi_size_bdd.py  test_position_restrictions.py  test_rotation.py  test_substitution_rules.py  test_team_balance.py  test_tournament_fairness.py
tests/e2e/: conftest.py  test_auth_e2e.py  test_completed_match_goals.py  test_connection_lost.py  test_export.py  test_fulltime_reopen.py  test_live_browse.py  test_match_options.py  test_plan_review.py  test_smoke.py  test_visibility.py
tests/integration/: conftest.py  test_auth.py  test_export.py  test_feedback.py  test_match_options.py  test_matches.py  test_public.py  test_squad.py  test_teams.py  test_tournaments.py
tests/unit/: conftest.py  test_auth_core.py  test_service_worker_cache.py
tests/unit/algorithm/: test_adjust_rotation.py  test_fairness.py  test_gk_selector.py  test_gk_selector_direct.py  test_multi_size.py  test_rotation_engine.py  test_rotation_engine_behaviors.py  test_skill_balancer.py  test_skill_balancer_direct.py  test_time_balancer_crossmatch.py  test_validator.py  test_validator_direct.py
tests/unit/models/: test_game_config.py
tests/unit/services/: test_match_service.py  test_tournament_service.py
