[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "football-rotation"
version = "0.5.0"
description = "Youth football squad rotation manager"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "mutmut>=2.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "openpyxl>=3.1",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "openpyxl>=3.1",
    "httpx>=0.27",  # Resend transactional email (backend/auth/email.py)
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, isolated tests — no DB or server",
    "integration: tests that hit DB or FastAPI test client",
    "bdd: Gherkin BDD scenarios via pytest-bdd",
    "e2e: Playwright browser smoke tests against a live server",
]
bdd_features_base_dir = "tests/bdd/features"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["backend/db/migrations"]  # Alembic-generated scaffolding

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in function defaults is intentional

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "B905"]  # long assertion messages and zip() without strict= are fine in tests

[tool.mutmut]
# C.4 — mutation-test the pure algorithm only. The seeded unit suite
# (tests/unit/conftest.py) is a deterministic oracle, so a surviving mutant
# means a genuinely hollow assertion rather than RNG noise.
source_paths = ["backend/algorithm"]
do_not_mutate = ["backend/algorithm/__init__.py"]
# To iterate on one module quickly, add e.g.
#   only_mutate = ["backend/algorithm/validator.py"]
# (keep source_paths on the whole package so sibling modules still import).
# Run only the fast, seeded unit tests against each mutant.
pytest_add_cli_args_test_selection = ["tests/unit", "-x", "-q"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/", "frontend/", "backend/db/migrations/"]
